<resources>
    <string name="app_name">MoviesExplorer</string>
    <string name="Error">Error getting Data :\\</string>
    <string name="Popular">most popular</string>
    <string name="Rate">Top Rated</string>
    <string name="Poster_loading">poster is loading</string>
    <string name="clips">Clips</string>
    <string name="reviews">Reviews</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="original_name">Original Name :</string>
    <string name="rate">Rate :</string>
    <string name="release_date">Release Date :</string>
</resources>
